# rusty-crystal-lattice-sim

./: .gitignore  README.md
sim/: Cargo.toml  Makefile  notes.md
sim/misc/: cpp_mindset_demo.cpp
sim/src/: colors.rs  config.rs  lattice.rs  main.rs  notes.md  resources.rs  scene.rs  spring.rs  test_code.rs
sim/src/lattice/: components.rs  lattice_gen.rs
visuals/: physics.py
