[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
# Revert dynamic linking feature before releasing game! 
# Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. 
# If you remove the "dynamic" feature, your game executable can run standalone.
# TODO: remove glam_assert one you find the bug or use debug_glam_assert to enable only in debug build
bevy = {version = "0.14.2", features =["dynamic_linking", "glam_assert"]}
rand = "0.8.5"
rand_chacha = "0.3.1"
smooth-bevy-cameras = "0.12.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#TODO:  if more performance is needed, can use LLD linker instead of Rust linker
